@@ -19,6 +19,8 @@
 #include "lightdm.h"
 
 static LightDMGreeter *greeter;
+static GKeyFile *state;
+static gchar *state_filename;
 static GtkWindow *login_window, *panel_window;
 static GtkLabel *message_label, *prompt_label;
 static GtkTreeView *user_view;
@@ -134,10 +136,28 @@ set_message_label (const gchar *text)
 static void
 start_authentication (const gchar *username)
 {
+    gchar *data;
+    gsize data_length;
+    GError *error = NULL;
+
     cancelling = FALSE;
     prompted = FALSE;
 
-    if (!username)
+    g_key_file_set_value (state, "greeter", "last-user", username);
+    data = g_key_file_to_data (state, &data_length, &error);
+    if (error)
+        g_warning ("Failed to save state file: %s", error->message);
+    g_clear_error (&error);
+    if (data)
+    {
+        g_file_set_contents (state_filename, data, data_length, &error);
+        if (error)
+            g_warning ("Failed to save state file: %s", error->message);
+        g_clear_error (&error);
+    }
+    g_free (data);
+
+    if (strcmp (username, "*other") == 0)
     {
         lightdm_greeter_authenticate (greeter, NULL);
     }
@@ -179,7 +199,7 @@ cancel_authentication (void)
 
     /* Start a new login or return to the user list */
     if (lightdm_greeter_get_hide_users_hint (greeter))
-        start_authentication (NULL);
+        start_authentication ("*other");
     else
     {
         gtk_widget_hide (login_box);
@@ -546,6 +566,8 @@ load_user_list ()
     const GList *items, *item;
     GtkTreeModel *model;
     GtkTreeIter iter;
+    gchar *last_user;
+    const gchar *selected_user;
 
     g_signal_connect (lightdm_user_list_get_instance (), "user-added", G_CALLBACK (user_added_cb), NULL);
     g_signal_connect (lightdm_user_list_get_instance (), "user-changed", G_CALLBACK (user_changed_cb), NULL);
@@ -581,10 +603,6 @@ load_user_list ()
                             2, lightdm_user_get_logged_in (user) ? PANGO_WEIGHT_BOLD : PANGO_WEIGHT_NORMAL,
                             3, pixbuf,
                             -1);
-
-        if (lightdm_greeter_get_select_user_hint (greeter) &&
-            strcmp (lightdm_greeter_get_select_user_hint (greeter), lightdm_user_get_name (user)) == 0)
-            gtk_tree_selection_select_iter (gtk_tree_view_get_selection (user_view), &iter);
     }
     if (lightdm_greeter_get_has_guest_account_hint (greeter))
     {
@@ -595,17 +613,46 @@ load_user_list ()
                             2, PANGO_WEIGHT_NORMAL,
                             3, gtk_icon_theme_load_icon (gtk_icon_theme_get_default (), "stock_person", 64, 0, NULL),
                             -1);
-        if (lightdm_greeter_get_select_guest_hint (greeter))
-            gtk_tree_selection_select_iter (gtk_tree_view_get_selection (user_view), &iter);
     }
 
     gtk_list_store_append (GTK_LIST_STORE (model), &iter);
     gtk_list_store_set (GTK_LIST_STORE (model), &iter,
-                        0, NULL,
+                        0, "*other",
                         1, "Other...",
                         2, PANGO_WEIGHT_NORMAL,
                         3, gtk_icon_theme_load_icon (gtk_icon_theme_get_default (), "stock_person", 64, 0, NULL),
                         -1);
+
+    last_user = g_key_file_get_value (state, "greeter", "last-user", NULL);
+
+    if (lightdm_greeter_get_select_user_hint (greeter))
+        selected_user = lightdm_greeter_get_select_user_hint (greeter);
+    else if (lightdm_greeter_get_select_guest_hint (greeter))
+        selected_user = "*guest";
+    else if (last_user)
+        selected_user = last_user;
+    else
+        selected_user = NULL;
+
+    if (selected_user && gtk_tree_model_get_iter_first (model, &iter))
+    {
+        do
+        {
+            gchar *name;
+            gboolean matched;
+            gtk_tree_model_get (model, &iter, 0, &name, -1);
+            matched = strcmp (name, selected_user) == 0;
+            g_free (name);
+            if (matched)
+            {
+                gtk_tree_selection_select_iter (gtk_tree_view_get_selection (user_view), &iter);
+                start_authentication (selected_user);
+                break;
+            }
+        } while (gtk_tree_model_iter_next (model, &iter));
+    }
+
+    g_free (last_user);
 }
 
 static cairo_surface_t *
@@ -658,7 +705,7 @@ main (int argc, char **argv)
     GtkTreeIter iter;
     GtkCellRenderer *renderer;
     GtkWidget *menuitem, *hbox, *image;
-    gchar *value;
+    gchar *value, *state_dir;
     GdkPixbuf *background_pixbuf = NULL;
     GdkColor background_color;
     gint i;
@@ -675,13 +722,24 @@ main (int argc, char **argv)
 
     signal (SIGTERM, sigterm_cb);
 
+    gtk_init (&argc, &argv);
+
     config = g_key_file_new ();
-    if (!g_key_file_load_from_file (config, CONFIG_FILE, G_KEY_FILE_NONE, &error) &&
-        !g_error_matches (error, G_FILE_ERROR, G_FILE_ERROR_NOENT))
+    g_key_file_load_from_file (config, CONFIG_FILE, G_KEY_FILE_NONE, &error);
+    if (error && !g_error_matches (error, G_FILE_ERROR, G_FILE_ERROR_NOENT))
         g_warning ("Failed to load configuration from %s: %s\n", CONFIG_FILE, error->message);
     g_clear_error (&error);
 
-    gtk_init (&argc, &argv);
+    state_dir = g_build_filename (g_get_user_cache_dir (), "lightdm-gtk-greeter", NULL);
+    g_mkdir_with_parents (state_dir, 0775);
+    state_filename = g_build_filename (state_dir, "state", NULL);
+    g_free (state_dir);
+
+    state = g_key_file_new ();
+    g_key_file_load_from_file (state, state_filename, G_KEY_FILE_NONE, &error);
+    if (error && !g_error_matches (error, G_FILE_ERROR, G_FILE_ERROR_NOENT))
+        g_warning ("Failed to load state from %s: %s\n", state_filename, error->message);
+    g_clear_error (&error);
 
     greeter = lightdm_greeter_new ();
     g_signal_connect (greeter, "show-prompt", G_CALLBACK (show_prompt_cb), NULL);  
@@ -840,18 +898,6 @@ main (int argc, char **argv)
     if (!lightdm_get_can_shutdown ())
         gtk_widget_hide (GTK_WIDGET (gtk_builder_get_object (builder, "shutdown_menuitem")));
 
-    user_view = GTK_TREE_VIEW (gtk_builder_get_object (builder, "user_treeview"));
-    gtk_tree_view_insert_column_with_attributes (user_view, 0, "Face", gtk_cell_renderer_pixbuf_new(), "pixbuf", 3, NULL);
-    gtk_tree_view_insert_column_with_attributes (user_view, 1, "Name", gtk_cell_renderer_text_new(), "text", 1, "weight", 2, NULL);
-
-    if (lightdm_greeter_get_hide_users_hint (greeter))
-        start_authentication (NULL);
-    else
-    {
-        load_user_list ();
-        gtk_widget_show (GTK_WIDGET (user_view));
-    }
-
     renderer = gtk_cell_renderer_text_new();
     gtk_cell_layout_pack_start (GTK_CELL_LAYOUT (session_combo), renderer, TRUE);
     gtk_cell_layout_add_attribute (GTK_CELL_LAYOUT (session_combo), renderer, "text", 0);
@@ -896,6 +942,18 @@ main (int argc, char **argv)
         }
         set_language (NULL);
     }
+
+    user_view = GTK_TREE_VIEW (gtk_builder_get_object (builder, "user_treeview"));
+    gtk_tree_view_insert_column_with_attributes (user_view, 0, "Face", gtk_cell_renderer_pixbuf_new(), "pixbuf", 3, NULL);
+    gtk_tree_view_insert_column_with_attributes (user_view, 1, "Name", gtk_cell_renderer_text_new(), "text", 1, "weight", 2, NULL);
+
+    if (lightdm_greeter_get_hide_users_hint (greeter))
+        start_authentication ("*other");
+    else
+    {
+        load_user_list ();
+        gtk_widget_show (GTK_WIDGET (user_view));
+    } 
 
     gtk_builder_connect_signals(builder, greeter);
 
